--- a/index.html.html
+++ b/index.html.html
@@ -20,14 +20,16 @@
         <section class="skills">
             <h2>技术特长</h2>
             <ul>
-                <li>前端框架VUE</li>
-                <li>后端Python Flask</li>
-                <li>数学建模</li>
+                <li>java</li>
+                <li>Python</li>
+                <li>web</li>
             </ul>
         </section>
         <section class="interests">
             <h2>兴趣</h2>
             <p>阅读</p>
+            <p>游戏</p>
+            <p>AI</p>
         </section>
     </div>
     <script src="script.js"></script>
